--- a/ganmademo/package.json
+++ b/ganmademo/package.json
@@ -11,12 +11,17 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "scss": "^0.2.4",
+    "supervisor": "^0.12.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
