--- a/ganmademo/package.json
+++ b/ganmademo/package.json
@@ -19,6 +19,7 @@
     "scss": "^0.2.4",
     "supervisor": "^0.12.0",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
     "ws": "^7.1.2"
