--- a/houtai/package.json
+++ b/houtai/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "houtai",
+  "name": "ganmademo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,13 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "element-ui": "^2.12.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "scss": "^0.2.4",
+    "supervisor": "^0.12.0",
+    "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.0",
-    "@vue/cli-plugin-eslint": "^3.12.0",
-    "@vue/cli-service": "^3.12.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
