--- a/houtai/package.json
+++ b/houtai/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.12.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mddir": "^1.1.1",
     "mongodb": "^3.3.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
